small style fixes for product card spacing and testimonial circle images

--- a/assets/et_cards.css
+++ b/assets/et_cards.css
@@ -4,6 +4,10 @@
   color: var(--color-scheme-text);
   text-align: var(--product-card-text-alignment);
 }
+.featured-collection-slider .card, .featured-collection-slider .article-card {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
 .card.lift:not(.card--info-hover):hover, .card.lift:not(.card--info-hover):focus-within, .article-card.lift:not(.card--info-hover):hover, .article-card.lift:not(.card--info-hover):focus-within {
   overflow: visible;
 }
@@ -106,7 +110,7 @@
   -webkit-transition-duration: 375ms;
   -o-transition-duration: 375ms;
   transition-duration: 375ms;
-  content: '';
+  content: "";
 }
 .card--info-hover.card--media .card__heading, .article-card--info-hover.card--media .card__heading {
   opacity: 0;
@@ -371,7 +375,7 @@
   margin-right: 0.5rem;
   opacity: 0.25;
   vertical-align: sub;
-  content: '/';
+  content: "/";
 }
 .article-card .card__information, .article-card .card-information, .page-card .card__information, .page-card .card-information {
   margin-left: 0px;
